--- a/client/src/components/Pages/Signup/UserInfo/Userinfo.css
+++ b/client/src/components/Pages/Signup/UserInfo/Userinfo.css
@@ -4,3 +4,22 @@
   align-content: space-between;
   flex-direction: column;
 }
+
+#geoSuggest {
+  display: block;
+  width: 100%;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.geosuggest__suggests--hidden {
+  max-height: 0;
+  overflow: hidden;
+  border-width: 0;
+}
