--- a/client/src/components/Pages/JoinTheParty/FirstImpression/FirstImpression.css
+++ b/client/src/components/Pages/JoinTheParty/FirstImpression/FirstImpression.css
@@ -3,7 +3,6 @@
   margin: 0;
   padding: 0;
   z-index: -99;
-  color: black;
 }
 video {
     width: 100%;
@@ -21,8 +20,10 @@ img {
     display: none;
 }
 .snap{
-    position:absolute;
-    display: flex;
-    z-index:1000;
+    display: block;
+    position: absolute;
+    width: max-content;
+    bottom: 8%;
+    margin: auto;
 
 }
