uWu cameraWerk and aesthetic changes

--- a/client/src/components/Pages/JoinTheParty/FirstImpression/FirstImpression.css
+++ b/client/src/components/Pages/JoinTheParty/FirstImpression/FirstImpression.css
@@ -20,10 +20,10 @@ img {
     display: none;
 }
 .snap{
-    display: block;
     position: absolute;
     width: max-content;
+    display: block;
     bottom: 8%;
     margin: auto;
-
+    float: right;
 }
