--- a/client/src/components/Pages/Signup/UserInfo/Userinfo.css
+++ b/client/src/components/Pages/Signup/UserInfo/Userinfo.css
@@ -5,6 +5,23 @@
   flex-direction: column;
 }
 
+label {
+  color: white;
+}
+
+.btn-primary.disabled, .btn-primary:disabled {
+  color: white;
+  border-color: #994d58;
+  background: #994d58;
+}
+
+.btn-primary, .btn-primary {
+  color: white;
+  border-color: #cd4559;
+  background: #cd4559;
+}
+
+
 #geoSuggest {
   display: block;
   width: 100%;
@@ -12,10 +29,10 @@
   font-size: 1rem;
   line-height: 1.5;
   color: #495057;
-  background-color: #fff;
+  background-color: transparent;
   background-clip: padding-box;
   border: 1px solid #ced4da;
-  border-radius: .25rem;
+  border-radius: 50px;
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 .geosuggest__suggests--hidden {
